# ddd-chat

./: .env.example  .gitignore  docker-compose.yml  dockerfile  pyproject.toml
injector_spicking/: module.py  repo.py
src/: conftest.py  fixtures.py
src/api/: config.py  container.py  dependencies.py  main.py
src/api/chats/: handlers.py
src/api/tests/: conftest.py  fixtures.py  test_chats.py
src/api/v1/chats/: handlers.py  schemas.py
src/config/: config.py  container.py  containers.py  init.py  log_config.py
src/domain/: services.py
src/domain/entities/: base.py  messages.py
src/domain/exceptions/: messages.py
src/domain/values/: base.py  messages.py
src/modules/chat/application/: exceptions.py  repositories.py
src/modules/chat/application/commands/: create_chat.py
src/modules/chat/domain/: entities.py  events.py  exceptions.py  repositories.py  values.py
src/modules/chat/infra/: converts.py  repositories.py
src/modules/chat/tests/application/: test_commands.py
src/modules/chat/tests/domain/: test_entities.py
src/modules/chat/tests/infra/: conftest.py  test_repositories.py
src/seedwork/application/: commands.py  events.py  exceptions.py  mediator.py
src/seedwork/domain/: entities.py  events.py  exceptions.py  values.py
src/seedwork/infra/: injector.py
src/tests/: conftest.py
src/tests/domain/entities/: test_messages.py
